// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`board reference replay: panier-express, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "96eb5ae02c2d6fac3f6b8d1219339ffe31cdcc35072c663b6053bf8625fb0f89",
}
`;

exports[`cards reference replay: pimp-my-ride, seed 23 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "fefea994db1f5f12856cc544d6c683cc6299b8840662d7a07abb022c01bba16f",
}
`;

exports[`catalogue reference replay: a-fond-les-ballons, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 61,
  "traceDigest": "acdd54bfe096c7ec755e7cc0a1afa7849054c6b74587443ecf3868a674bbf68e",
}
`;

exports[`catalogue reference replay: a-fond-les-ballons, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 36,
  "traceDigest": "5bdaa821271f7a405746a6d56ab390bdfd1e4d0547a231d59fe2a91098b86fe1",
}
`;

exports[`catalogue reference replay: a-fond-les-ballons, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 28,
  "traceDigest": "2ea51db2f6142801d190faf7fb355e79348759cb197a8e41da0df73612de8ed8",
}
`;

exports[`catalogue reference replay: arche-de-mnemosyne, seed 11 1`] = `
{
  "actionTypes": [
    "answer",
    "game.configure",
    "timeout",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "9b65113f5444b223ff858e5042470ca7b3e534e42658f881dbbe3bc690e41709",
}
`;

exports[`catalogue reference replay: arche-de-mnemosyne, seed 23 1`] = `
{
  "actionTypes": [
    "answer",
    "game.configure",
    "timeout",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "f6bb5fc9f8c60530136db68b3434a5ac1326cf616c80d0549d8ffc4abaee19cb",
}
`;

exports[`catalogue reference replay: arche-de-mnemosyne, seed 67 1`] = `
{
  "actionTypes": [
    "answer",
    "game.configure",
    "timeout",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "e681fbb8a7c973eb543add4e9a24563945ed0e335b28f88a9734792eacc10a0d",
}
`;

exports[`catalogue reference replay: aventure-sauvage, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 27,
  "traceDigest": "13a3caf0570159196a3b7e6138e5fc6a5da5aaa2d3c64d1ac1ed09822908b3f4",
}
`;

exports[`catalogue reference replay: aventure-sauvage, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 28,
  "traceDigest": "31fa2d9145a21a0c2bd81fa7246d7bd31344244a16f10cab345cdf5c61c989a3",
}
`;

exports[`catalogue reference replay: aventure-sauvage, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 33,
  "traceDigest": "feb04b58ec72eafb42455bbace3b8168855f88463d787e9df8d1f95c76f0081f",
}
`;

exports[`catalogue reference replay: ca-derape, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 11,
  "traceDigest": "41c67043669325a25836e9da16d6ead9688504e1e1fd82eae78482997e414d76",
}
`;

exports[`catalogue reference replay: ca-derape, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 11,
  "traceDigest": "09df1c69a559b4d51e1c0aabe2cd0979817a66e7743dd8d301d35a19df9e14bf",
}
`;

exports[`catalogue reference replay: ca-derape, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 17,
  "traceDigest": "32d6a3b70f2b114b6f71e030d933552db5eb5931f81354340e690e23f615d881",
}
`;

exports[`catalogue reference replay: cat-pattes, seed 11 1`] = `
{
  "actionTypes": [
    "discard_card",
    "draw",
    "game.configure",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "3c40bc7131e88932f43d031382159c4c53f7825933cf2d46ab5947fac20b5776",
}
`;

exports[`catalogue reference replay: cat-pattes, seed 23 1`] = `
{
  "actionTypes": [
    "discard_card",
    "draw",
    "game.configure",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "e6dd3f0a392db9849082bc3f02a9808933119a2b30c6561233b44d66d5632a79",
}
`;

exports[`catalogue reference replay: cat-pattes, seed 67 1`] = `
{
  "actionTypes": [
    "discard_card",
    "draw",
    "game.configure",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "c8dd8b9d85a08e0a797c2cef0749d74f592dda72e85918aa3221ee9ef253908e",
}
`;

exports[`catalogue reference replay: cercles-sacres, seed 11 1`] = `
{
  "actionTypes": [
    "discard_card",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "588c14351c36ae24d0054c1879b065274c6491eee9deaf1761e888bff9c40691",
}
`;

exports[`catalogue reference replay: cercles-sacres, seed 23 1`] = `
{
  "actionTypes": [
    "discard_card",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "8880f0e5080253aaba5160759ae96c84506d0ecb46af934fdc16fe4ed985539b",
}
`;

exports[`catalogue reference replay: cercles-sacres, seed 67 1`] = `
{
  "actionTypes": [
    "discard_card",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "4cc4e0a8570b2f4611287f1b9e7a4c58658a8babf067b1837085afa3238a75c8",
}
`;

exports[`catalogue reference replay: contes-et-cacahuetes, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 40,
  "traceDigest": "8e9ee6bc45f6aa09773dd3cff064108d8944ed407c3188dc38ef08362f8a1797",
}
`;

exports[`catalogue reference replay: contes-et-cacahuetes, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 37,
  "traceDigest": "dc1106125ed2c1ba5f0ed5e6daa23f22cee1e5e95f3a89f9aa9a1dbf102a6707",
}
`;

exports[`catalogue reference replay: contes-et-cacahuetes, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 62,
  "traceDigest": "09676210a73c4d94ce603572fb21bafe448cc38263233301782d2858d4a43634",
}
`;

exports[`catalogue reference replay: corridor, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "game.configure",
    "pathWalls_move",
    "pathWalls_place_wall",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "4e4711374dc2d5953f4d514e30b3bccac0bc7198d49e57ab7ab538897076353e",
}
`;

exports[`catalogue reference replay: corridor, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "game.configure",
    "pathWalls_move",
    "pathWalls_place_wall",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "a94da262daa5bc16d54bc7a153c5c72f8cda8d7c8088eb882c78815c3bf1d679",
}
`;

exports[`catalogue reference replay: corridor, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "game.configure",
    "pathWalls_move",
    "pathWalls_place_wall",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "f77674a4626bad371dacb7b16b31af9a34aa162fac700af9c736e9c25c04e34d",
}
`;

exports[`catalogue reference replay: course-des-etoiles, seed 11 1`] = `
{
  "actionTypes": [
    "avancer",
  ],
  "finished": true,
  "steps": 5,
  "traceDigest": "4a14ea82875b4d006c6b3c8f62fc555affef5065f0a0184724371ae32876385d",
}
`;

exports[`catalogue reference replay: course-des-etoiles, seed 23 1`] = `
{
  "actionTypes": [
    "avancer",
  ],
  "finished": true,
  "steps": 5,
  "traceDigest": "c059423c16bed45783dd3c73c7012d577913f269482acd9f701a3fd1bff3dafd",
}
`;

exports[`catalogue reference replay: course-des-etoiles, seed 67 1`] = `
{
  "actionTypes": [
    "avancer",
  ],
  "finished": true,
  "steps": 5,
  "traceDigest": "52a902854ddd66cd5faed0c174fd785a79d72e5280f9542e2888bbc164d836f7",
}
`;

exports[`catalogue reference replay: dame-nature, seed 11 1`] = `
{
  "actionTypes": [
    "ask_card",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "f935181a5aa8c8a70510380fe0cf9c89d2bf4457501ed624e800a1df7b9406b2",
}
`;

exports[`catalogue reference replay: dame-nature, seed 23 1`] = `
{
  "actionTypes": [
    "ask_card",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "3fe23896fa133de774230775c45cd1c693a47df7086c6b829e1830e38e8a763c",
}
`;

exports[`catalogue reference replay: dame-nature, seed 67 1`] = `
{
  "actionTypes": [
    "ask_card",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "4ab87a248e18456a179649668ed0aae5f12fb1b301a7b9d36d456b94ab63b8d3",
}
`;

exports[`catalogue reference replay: en-attendant-minuit, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "choice.timeout",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 62,
  "traceDigest": "2bd03cbda3ba74fb553af6feec163abcbeec88c053dfda66335334b26550be27",
}
`;

exports[`catalogue reference replay: en-attendant-minuit, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "ed45a8d70bd0708a880b95b8643d53397adeeb48acd5c90cfe0da5f7feb03a3d",
}
`;

exports[`catalogue reference replay: en-attendant-minuit, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "d9086d57ec4289480f377f5fd57653f4f9a51647f2f5f2b404cefb5c1944722b",
}
`;

exports[`catalogue reference replay: entre-rites-et-lumieres, seed 11 1`] = `
{
  "actionTypes": [
    "ask_card",
    "choice.resolve",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "43a1767ab93dab03e978725b34f7477a7dcf6e488c2c21af112767cf6cb5baef",
}
`;

exports[`catalogue reference replay: entre-rites-et-lumieres, seed 23 1`] = `
{
  "actionTypes": [
    "ask_card",
    "choice.resolve",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "2714ab8fd9e476178fe58efa4c939f1407d2c048771044642cafeb802bb2638e",
}
`;

exports[`catalogue reference replay: entre-rites-et-lumieres, seed 67 1`] = `
{
  "actionTypes": [
    "ask_card",
    "choice.resolve",
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "e93b92394efa39c4e9a040c1675c089120de045fbe43cb5d546955a2bdc33399",
}
`;

exports[`catalogue reference replay: foulees-fantastiques, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "2eac08acce9d67672d254e070ce4d8f5102a3b7c5e4a6c91b7fd83169535ed78",
}
`;

exports[`catalogue reference replay: foulees-fantastiques, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "8d5fcb8cfd9e7dbaf95789fa110988d1ee58a4066b291dc33b87470f1aaf54dc",
}
`;

exports[`catalogue reference replay: foulees-fantastiques, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "1b4a40ecb0cd3addc578fb31f9d9fdbbbbc30e6f6e40ca54a2db839baf00f19f",
}
`;

exports[`catalogue reference replay: frousse-party, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "86a36cf6570c27c5c9d482ee51d06d2adce907e30dca6e37987bce4db2a38afd",
}
`;

exports[`catalogue reference replay: frousse-party, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 62,
  "traceDigest": "d678b132656110ae68dcc8eafcab4addd86133cec8c7e3ba5f4a43527e0179d7",
}
`;

exports[`catalogue reference replay: frousse-party, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 52,
  "traceDigest": "b1c4d374df0ad74ea829f72596a0a14e85b2b8613931e38a832abe00d8092fc9",
}
`;

exports[`catalogue reference replay: galopons-ensemble, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "ff725f74971b3f5ffbc7215ad03273b1025ce49e9e4d45336fe4a9a45987d03f",
}
`;

exports[`catalogue reference replay: galopons-ensemble, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "382c9b31655206cbf21d530346673d04abe593009d9a6c07bd70169549b9e3ea",
}
`;

exports[`catalogue reference replay: galopons-ensemble, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 20,
  "traceDigest": "33f3135b3246045e2a1ba12da929dc07f0c6a21bad1e8a650300ed55938842b0",
}
`;

exports[`catalogue reference replay: gerard-president, seed 11 1`] = `
{
  "actionTypes": [
    "choose_winner",
    "pass",
    "play_name",
    "play_special",
    "set_theme",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "3b2ba76504bdf624841e4e07bd5d3384baf184c951892ee8dbf08ed1dd8f9b9a",
}
`;

exports[`catalogue reference replay: gerard-president, seed 23 1`] = `
{
  "actionTypes": [
    "choose_winner",
    "pass",
    "play_name",
    "play_special",
    "set_theme",
  ],
  "finished": true,
  "steps": 56,
  "traceDigest": "a53368108b02cdd15431630d14eb276f8821b0faaaabb0d6c09e41042493718b",
}
`;

exports[`catalogue reference replay: gerard-president, seed 67 1`] = `
{
  "actionTypes": [
    "choose_winner",
    "pass",
    "play_name",
    "play_special",
    "set_theme",
  ],
  "finished": true,
  "steps": 64,
  "traceDigest": "1ee92d6b3069bd0f4f3864ad25c68da53043614bf0f9f58d8f1af6da646ce5d4",
}
`;

exports[`catalogue reference replay: jeu-oie, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 39,
  "traceDigest": "f244aab492948634aff147344b80c3f542793520b9466b393b575c98a6a1e291",
}
`;

exports[`catalogue reference replay: jeu-oie, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 31,
  "traceDigest": "e44f90d98f9a46cfc70521968ad9c86740e4227afa7ec728a5409c7ed449f5c9",
}
`;

exports[`catalogue reference replay: jeu-oie, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 19,
  "traceDigest": "98a598514908c75ad311db0d5e78c124f93b26ff46e6be25531be38b2cc22be5",
}
`;

exports[`catalogue reference replay: la-bande-a-banane, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 32,
  "traceDigest": "05a3079e856feac93110453c9785178de41e10fa0562827a3a4af27b03e738fe",
}
`;

exports[`catalogue reference replay: la-bande-a-banane, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "choice.timeout",
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 23,
  "traceDigest": "b554e2ffcbe37484cb66191758f6b3ff42c98f235111b9606110f2fce3501250",
}
`;

exports[`catalogue reference replay: la-bande-a-banane, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 24,
  "traceDigest": "97fb525536b9ed072c5295f2a38da5b4dcb6385621c2e09d808b0b507c2e5091",
}
`;

exports[`catalogue reference replay: la-grande-mine-de-barbak, seed 11 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 48,
  "traceDigest": "422c5820cfd4954987898c7e25b24756dfa02e4237c0c41c54d0efca8592831f",
}
`;

exports[`catalogue reference replay: la-grande-mine-de-barbak, seed 23 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 21,
  "traceDigest": "fe4ab73e0c5821c008371e81edf9a4fcf4eae5218ffb12b8d9a873d950cb0a28",
}
`;

exports[`catalogue reference replay: la-grande-mine-de-barbak, seed 67 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 52,
  "traceDigest": "8257a4dbded0aece4f480321a860427b32c744dcfb90cbc3bd85cd46b15640a9",
}
`;

exports[`catalogue reference replay: la-parade-sucree, seed 11 1`] = `
{
  "actionTypes": [
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "a783207f2534a4252adf974acfe53b031a6a3cd7b77dfd0f24434892d79ea9bd",
}
`;

exports[`catalogue reference replay: la-parade-sucree, seed 23 1`] = `
{
  "actionTypes": [
    "pass",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "97129bbebd9281cab8f252900b7eeb1b62e6180ddc0d1612ff22cdef39096c03",
}
`;

exports[`catalogue reference replay: la-parade-sucree, seed 67 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "d7b3181e7ea0d23c00ae3843c0408fd1527f9577ad5c8533c6483e65ebb37878",
}
`;

exports[`catalogue reference replay: lama, seed 11 1`] = `
{
  "actionTypes": [
    "cards-discard-penalty-play",
    "cards-discard-penalty-quit",
    "draw",
    "game.configure",
  ],
  "finished": true,
  "steps": 17,
  "traceDigest": "7601fd7d3d29c7e6192635637195ad3b1be6b15bc7a312da2506163abfe5199e",
}
`;

exports[`catalogue reference replay: lama, seed 23 1`] = `
{
  "actionTypes": [
    "cards-discard-penalty-play",
    "cards-discard-penalty-quit",
    "game.configure",
  ],
  "finished": true,
  "steps": 12,
  "traceDigest": "00f7a68a614077cf479c612841568f3d4f157d79f062f15caaf5ee4b7fa9a2ec",
}
`;

exports[`catalogue reference replay: lama, seed 67 1`] = `
{
  "actionTypes": [
    "cards-discard-penalty-play",
    "cards-discard-penalty-quit",
    "game.configure",
  ],
  "finished": true,
  "steps": 9,
  "traceDigest": "e0f72feb0a77ed6cb19d5c6925797a2b9de03e470d295ee0ad235415bb797879",
}
`;

exports[`catalogue reference replay: le-marche-des-merveilles, seed 11 1`] = `
{
  "actionTypes": [
    "buy",
    "pass",
    "protect",
    "rumor",
    "sell",
  ],
  "finished": true,
  "steps": 12,
  "traceDigest": "e3236bfe8f596ef72548cae63b969b485a1703071876237c2cbda911c048a164",
}
`;

exports[`catalogue reference replay: le-marche-des-merveilles, seed 23 1`] = `
{
  "actionTypes": [
    "buy",
    "pass",
    "protect",
    "rumor",
  ],
  "finished": true,
  "steps": 12,
  "traceDigest": "99beb3fa4a8b558024c0c415f5010cb55a518a404fac15204b3b8771d25031d9",
}
`;

exports[`catalogue reference replay: le-marche-des-merveilles, seed 67 1`] = `
{
  "actionTypes": [
    "buy",
    "pass",
    "protect",
    "rumor",
  ],
  "finished": true,
  "steps": 12,
  "traceDigest": "a6bad6c7aad104a34e33950a03bb90ee630c2e8d1e27286043330fc92b42314b",
}
`;

exports[`catalogue reference replay: les-absurdissimes, seed 11 1`] = `
{
  "actionTypes": [
    "judge_pick",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "7d1c32686f78c1211f35db3e6151771e496f088747826967867436c198518b81",
}
`;

exports[`catalogue reference replay: les-absurdissimes, seed 23 1`] = `
{
  "actionTypes": [
    "judge_pick",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "275631c4c5b79bf31e1063ee7b88be3d77325f2d8a89bbe2676d64f77dc55508",
}
`;

exports[`catalogue reference replay: les-absurdissimes, seed 67 1`] = `
{
  "actionTypes": [
    "judge_pick",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "f6a7f916d9d9fac3fa23211f36fef31d93ad3674dcc8d28c168772ccc59912ed",
}
`;

exports[`catalogue reference replay: les-mains-de-la-terre, seed 11 1`] = `
{
  "actionTypes": [
    "request_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "9b577a33a3cde7777d7d9b04901f10b65c4ae80959adc0d421a4b141aa93a124",
}
`;

exports[`catalogue reference replay: les-mains-de-la-terre, seed 23 1`] = `
{
  "actionTypes": [
    "request_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "17c4ad6d48da0ae855e50497db17138b2cca67c95f212ea56b702c0e33a29f47",
}
`;

exports[`catalogue reference replay: les-mains-de-la-terre, seed 67 1`] = `
{
  "actionTypes": [
    "request_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "0cd195e2fc344c859bd8ad9e95d8a79b43d9ba5b2ff34cd3fe774519b449fae1",
}
`;

exports[`catalogue reference replay: mission-galaxie, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 32,
  "traceDigest": "68cb786ab95245d9b00935698ed44302e198126fc7bfb2bb3b112fc9eb45dfa7",
}
`;

exports[`catalogue reference replay: mission-galaxie, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 23,
  "traceDigest": "6a015fecb2b6e0673326d0ca202a521caa2129bcd3b76cc1c561297a16088019",
}
`;

exports[`catalogue reference replay: mission-galaxie, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": true,
  "steps": 29,
  "traceDigest": "a6c08864be1a4e7f4fc005e0394051cb12df8cf99167977dee158d9e3b3004ab",
}
`;

exports[`catalogue reference replay: mon-village-mon-histoire, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 22,
  "traceDigest": "748e87b361b72956801bab7b1d3aa549b4821b5bf7f261cc23728ade04682a57",
}
`;

exports[`catalogue reference replay: mon-village-mon-histoire, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 22,
  "traceDigest": "88e1c3fe8508da808e9fd3d69f28be083ff3699fc3d326756870ed0aab02480e",
}
`;

exports[`catalogue reference replay: mon-village-mon-histoire, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 28,
  "traceDigest": "40f5d262f65a30feda5cad7d0bfcdf7130a7990e0af5150b29fa1df84ed970d2",
}
`;

exports[`catalogue reference replay: morpion, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "morpion_play",
  ],
  "finished": true,
  "steps": 11,
  "traceDigest": "94cae25a42af15554af95aca395ee091a89cb59e94646a65d779ff1fa0b8d154",
}
`;

exports[`catalogue reference replay: morpion, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "morpion_play",
  ],
  "finished": true,
  "steps": 7,
  "traceDigest": "c38364f0c3c0bb53dd2714cb560f3190bb08490fd6386a479b587d994735b643",
}
`;

exports[`catalogue reference replay: nawak, seed 11 1`] = `
{
  "actionTypes": [
    "choose_answer",
    "vote_answer",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "950a029cfd9f73957e5eb6c18b15d3dac9b37771e240413973a73366acdaf545",
}
`;

exports[`catalogue reference replay: nawak, seed 23 1`] = `
{
  "actionTypes": [
    "choose_answer",
    "vote_answer",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "7046b4adbb837a77b9bcb88e2b640796c18bc79be3ff0b47b065fe47cae7b90e",
}
`;

exports[`catalogue reference replay: nawak, seed 67 1`] = `
{
  "actionTypes": [
    "choose_answer",
    "vote_answer",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "a47a0fd844c0dd56900f9d472472011359f579e1ac6c0489df85dce1fb245e79",
}
`;

exports[`catalogue reference replay: odyssee-quatre-cieux, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "2e0b7edeb8c51e28771893a4fe380aa33f5469dadb744af86ab0ac6d84587290",
}
`;

exports[`catalogue reference replay: odyssee-quatre-cieux, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "be6c1cde9dee25bbbcb2f403c00d581438d6c83a315e363aff077fbf9083ee20",
}
`;

exports[`catalogue reference replay: odyssee-quatre-cieux, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "fc1a8d464604bba1655c8e6fcdab9e69ecb7623f3de82f826e5c4be72259b3d8",
}
`;

exports[`catalogue reference replay: olympia, seed 11 1`] = `
{
  "actionTypes": [
    "draw_card",
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "5a0e758423ecb02502761c52595335be39e3d2c5e0b15fa3bb4d4756c7f70908",
}
`;

exports[`catalogue reference replay: olympia, seed 23 1`] = `
{
  "actionTypes": [
    "draw_card",
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "99c2ac341bae5cf3c8b4a25766c411009f68de747acce9031dd9ea78c61d40e7",
}
`;

exports[`catalogue reference replay: olympia, seed 67 1`] = `
{
  "actionTypes": [
    "draw_card",
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "d443df8a2a48b6ab43eaeba7ae72dc00e797249022e0b667634b316e825aa178",
}
`;

exports[`catalogue reference replay: panier-express, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "a27ac609b952117476b84288d94cc2f992d3febc9495f75e4aa3a801ba413670",
}
`;

exports[`catalogue reference replay: panier-express, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "7f2b60202690f81b55bab647358295b2b6ce9a0cf75cef55eace028beea91549",
}
`;

exports[`catalogue reference replay: pimp-my-ride, seed 11 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "5273bcb4ccdff00ec7207c40f23a1f0f6a4d0ef8d37f9c8ca33f09c2f404820c",
}
`;

exports[`catalogue reference replay: pimp-my-ride, seed 67 1`] = `
{
  "actionTypes": [
    "pass",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "de0687297e727405350c987863cff107d933c9f3e36bd51d46428f0599af6e1d",
}
`;

exports[`catalogue reference replay: pirates-en-vadrouille, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 33,
  "traceDigest": "99b6f06e265ba02c8ca82f1cb3f6f0db5a8b947cb6db2395334ed4b2ab2e0564",
}
`;

exports[`catalogue reference replay: pirates-en-vadrouille, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "c14b59bac0a2b25693eccee0e947e5a066a87b629b6b9bfbc04794b60c6dc714",
}
`;

exports[`catalogue reference replay: pirates-en-vadrouille, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 27,
  "traceDigest": "fc2c86e576b430a59880fc58d3c3f783306b4124f69ae878df921e502863ec49",
}
`;

exports[`catalogue reference replay: primalis, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 13,
  "traceDigest": "5dd79910633e0af2264df0223f04258b84df5c28f07d2adf9826d114fa65d58f",
}
`;

exports[`catalogue reference replay: primalis, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 14,
  "traceDigest": "909395e4663d62b2750ceffced88cc21e2a2015292870d6fe0c38d59c72f33c9",
}
`;

exports[`catalogue reference replay: primalis, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 9,
  "traceDigest": "c6814c85935d5a2f4ab940129d7e6394da3b9af4e4d2671580838d3e15df6750",
}
`;

exports[`catalogue reference replay: sac-a-malices, seed 11 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "game.configure",
    "mortgage",
    "pay_fine",
    "roll",
    "unmortgage",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "7c885a8b31a24574a19bec508bdbce7bc285eed08b11ea20a0dc132efc8c686d",
}
`;

exports[`catalogue reference replay: sac-a-malices, seed 23 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "game.configure",
    "mortgage",
    "roll",
    "unmortgage",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "8392de45ab448907399df0d698fa4b4d2aba42e9588d4c50dbaa6235d26952b8",
}
`;

exports[`catalogue reference replay: sac-a-malices, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "game.configure",
    "mortgage",
    "pay_fine",
    "roll",
    "unmortgage",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "b0f11fd5102e6de8e7bdb122abb24c31c0fe66f468d0eca489fb741d6a0aca7f",
}
`;

exports[`catalogue reference replay: taxi-express, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "76f5f9e5c36ab016e24143101e59175936a327452fc32cda761f1b61988d80b6",
}
`;

exports[`catalogue reference replay: taxi-express, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "a6af4a12e7145ba596f3fc37049e73aa69f937f1d61f7b979b03d15cb3188425",
}
`;

exports[`catalogue reference replay: taxi-express, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "f6a62ff1652cf8c9ac5f76f9d32b25d0b7337c26fe4545bebabd5bcb10004b91",
}
`;

exports[`catalogue reference replay: tout-pres-de-maman, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 23,
  "traceDigest": "d9d99191150ba11b7bbb1cc6af626d7bdfaec3e99c17550c6cd18247ea7cf187",
}
`;

exports[`catalogue reference replay: tout-pres-de-maman, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 18,
  "traceDigest": "05fa8cb41c9ba80209aa6311bcbae541bccc04195f65255e75174b92bd9436ad",
}
`;

exports[`catalogue reference replay: tout-pres-de-maman, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": true,
  "steps": 21,
  "traceDigest": "b8557c50943a54de12025fbeb67513c42f8d6ec0dff486b3cc66456732d595e3",
}
`;

exports[`catalogue reference replay: voyage-en-terre-de-brumes, seed 11 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "ba079ad7de335f1ac91e5188a5c845e76034649be04aa31759101af91615e5f4",
}
`;

exports[`catalogue reference replay: voyage-en-terre-de-brumes, seed 23 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "2bb715864f4b7e0d1673923638236e406be5716d2a5171ddec8fe0a06a5020fd",
}
`;

exports[`catalogue reference replay: voyage-en-terre-de-brumes, seed 67 1`] = `
{
  "actionTypes": [
    "roll",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "161c399bef7404d613d0b71339c2f00ab1283e1582b9ccf987ef7ca1db5ccad0",
}
`;

exports[`catalogue reference replay: zig-et-zag, seed 11 1`] = `
{
  "actionTypes": [
    "draw_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "65b537f5ff751811dd50e82270c332bc61befff388638578a630525498290b5d",
}
`;

exports[`catalogue reference replay: zig-et-zag, seed 23 1`] = `
{
  "actionTypes": [
    "draw_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "1c2099484db0d3ce8f7dcd9b59b4627817d646a36dd4739b0306d781a9d37eff",
}
`;

exports[`catalogue reference replay: zig-et-zag, seed 67 1`] = `
{
  "actionTypes": [
    "draw_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "06bd279d60092dd45cd70b0369931307685dbba3fab1866adbe0a63b65588962",
}
`;

exports[`choice reference replay: cat-pattes, seed 37 1`] = `
{
  "actionTypes": [
    "discard_card",
    "draw",
    "game.configure",
    "play_card",
  ],
  "finished": false,
  "steps": 64,
  "traceDigest": "465a2f9a5d7c3dee47af5631e43e347e24f2533f8a0aa070290022e566949633",
}
`;

exports[`collection reference replay: la-bande-a-banane, seed 41 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "pass",
    "play_card",
  ],
  "finished": true,
  "steps": 26,
  "traceDigest": "dcad52b9157d6f658cca2a8fc9d0507d57d1f1a04dcab31bf9426ae79b306aff",
}
`;

exports[`race reference replay: a-fond-les-ballons, seed 53 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "draw_card",
    "roll",
  ],
  "finished": true,
  "steps": 53,
  "traceDigest": "eec0e5b0fd8fc8cf8ab2746b63beac6d5870b9852eadb718d8cad40048b14d8c",
}
`;

exports[`spatial reference replay: morpion, seed 67 1`] = `
{
  "actionTypes": [
    "choice.resolve",
    "morpion_play",
  ],
  "finished": true,
  "steps": 11,
  "traceDigest": "a0caaea0a7b69bd133469d1f3c4efe0cfee1f03336f8b42791fb351a85c257ac",
}
`;
